--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,10 @@
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/sim")
+
 set(GB_SRCS
   "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/loguru.cpp"
 )
 
-add_executable(gb ${GB_SRCS})
+add_executable(gb ${GB_SRCS} ${SIM_SRCS})
 target_link_libraries(gb pthread dl)
 target_compile_definitions(gb PRIVATE LOGURU_WITH_STREAMS)
