Add bare MBC0 implementation.

--- a/src/sim/CMakeLists.txt
+++ b/src/sim/CMakeLists.txt
@@ -1,4 +1,7 @@
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/mem")
+
 set(SIM_SRCS
   "${CMAKE_CURRENT_SOURCE_DIR}/Simulator.cpp"
+  ${MEM_SRCS}
   PARENT_SCOPE
 )
